SFDCProject/src/objects/PreBoughtPanelLimits__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Min/Max on PreBought Panels by Panel Type

Panel Type	Min	Max	Comments
LG245M1C-G2	60	70	New high/low limits as per BSKY-566
LG245S1C-G2	60	70	New high/low limits as per BSKY-566
LG250S1C-G2	35	45	New high/low limits as per BSKY-566
LG255S1C-G2	35	45	New high/low limits as per BSKY-566
SW235 Poly	35	45	Use current default high/low limits
SW255 Mono	35	45	Use current default high/low limits
YL235P-29b	n/a	n/a	Follows existing Rule: YingLi cannot be on Split Deals!
YL240P-29b	n/a	n/a	Follows existing Rule: YingLi cannot be on Split Deals!</description>
    <fields>
        <fullName>MaxPreBoughtPercentage__c</fullName>
        <label>MaxPreBoughtPercentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPreBoughtPercentage__c</fullName>
        <label>MinPreBoughtPercentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <description>LG245M1C-G2
LG245S1C-G2
LG250S1C-G2
LG255S1C-G2
SW235 Poly
SW255 Mono
YL235P-29b
YL240P-29b</description>
        <label>Panel Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PreBoughtPanelLimits</label>
</CustomObject>